showroom spacing fixes

--- a/src/assets/less/showrooms.less
+++ b/src/assets/less/showrooms.less
@@ -55,7 +55,7 @@
                 width: 100vw;
                 height: 1px;
                 background: #D2D8DF;
-                margin: 30px 0px;
+                margin: 20px 0px;
                 opacity: 1;
                 display: block;
             }
@@ -428,7 +428,7 @@
     }
 
     #map-section {
-        padding: 60px 10px 120px 10px;
+        padding: 120px 10px;
 
         .cs-header-container{
             margin-bottom: 120px;
